# docs/api/openapi.yml
@@ -3550,6 +3550,46 @@ paths:
       summary: Update notification channel
       tags:
       - channels
+  /api/v1/channels/test:
+    post:
+      deprecated: false
+      description: This endpoint tests a notification channel by sending a test notification
+      operationId: TestChannel
+      responses:
+        "204":
+          description: No Content
+        "400":
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/RenderErrorResponse'
+          description: Bad Request
+        "401":
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/RenderErrorResponse'
+          description: Unauthorized
+        "403":
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/RenderErrorResponse'
+          description: Forbidden
+        "500":
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/RenderErrorResponse'
+          description: Internal Server Error
+      security:
+      - api_key:
+        - EDITOR
+      - tokenizer:
+        - EDITOR
+      summary: Test notification channel
+      tags:
+      - channels
   /api/v1/cloud-integrations/{cloud_provider}/agent-check-in:
     post:
       deprecated: true
@@ -7087,9 +7127,9 @@ paths:
       - serviceaccount
   /api/v1/testChannel:
     post:
-      deprecated: false
-      description: This endpoint tests a notification channel by sending a test notification
-      operationId: TestChannel
+      deprecated: true
+      description: 'Deprecated: use /api/v1/channels/test instead'
+      operationId: TestChannelDeprecated
       responses:
         "204":
           description: No Content
@@ -7122,7 +7162,7 @@ paths:
         - EDITOR
       - tokenizer:
         - EDITOR
-      summary: Test notification channel
+      summary: Test notification channel (deprecated)
       tags:
       - channels
   /api/v1/user:
